# distributed-ml-training-system

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
